# VTK_Devcontainer

./: .dockerignore  Dockerfile  README.md
.github/workflows/: build_deploy.yml
vtkDemo/: CMakeLists.txt  CylinderExample.cpp
